# redis-windows

./: .editorconfig  .gitattributes  .gitignore  README.md  build-and-release.bat
.github/workflows/: release.yml
overlay/: BUILD_WINDOWS.md  CMakeLists.txt
overlay/cmake/Modules/: Packaging.cmake  RedisSetup.cmake  SourceFiles.cmake  Utils.cmake
overlay/src/: CMakeLists.txt
overlay/src/modules/: CMakeLists.txt
overlay/tests/: CMakeLists.txt
overlay/tests/modules/: CMakeLists.txt
patches/: hiredis-cmake.patch  server.patch
service/: redis-service.xml
